--- a/conf/base/parameters_data_science.yml
+++ b/conf/base/parameters_data_science.yml
@@ -3,27 +3,130 @@ model_options:
   random_state: 0
   target: RET
   kfold: 2
+  feature_importance_threshold: 0.01
+  nn_epochs: 10
+  batch_size: 32
   features:
-    - RET_1
-    - RET_2
-    - RET_3
-    - RET_4
-    - RET_5
-    - RET_6
-    - RET_7
-    - RET_8
-    - RET_9
-    - RET_10
-    - RET_11
-    - RET_12
-    - RET_13
-    - RET_14
-    - RET_15
+    - VOLUME_18
+    - OBV_4_2
     - RET_16
+    - OBV_6_2
+    - RET_2_INDUSTRY_GROUP_median
+    - EMA_5_2
+    - EMA_6_2
+    - MOM_6_5
+    - RET_4_SECTOR_median
+    - RET_1_INDUSTRY_GROUP_std
+    - VOLUME_13
+    - WMA_7_5
+    - RET_4_SUB_INDUSTRY_median
+    - RET_14
+    - VOLUME_10
     - RET_17
-    - RET_18
-    - RET_19
+    - RET_5_SUB_INDUSTRY_std
+    - RET_4
+    - RET_4_INDUSTRY_std
+    - VOLUME_20
+    - OBV_1_5
+    - RET_1_SUB_INDUSTRY_std
     - RET_20
+    - OBV_5_5
+    - EMA_5_5
+    - RET_5_SUB_INDUSTRY_median
+    - SMA_6_2
+    - RET_2_INDUSTRY_std
+    - EMA_7_5
+    - RET_3_INDUSTRY_GROUP_median
+    - OBV_1_2
+    - EMA_7_2
+    - OBV_3_5
+    - RET_2_INDUSTRY_GROUP_std
+    - WMA_5_2
+    - RET_1_SUB_INDUSTRY_median
+    - RET_11
+    - VOLUME_11
+    - RET_3_INDUSTRY_std
+    - VOLUME_9
+    - RET_1_INDUSTRY_GROUP_median
+    - RET_5_INDUSTRY_GROUP_median
+    - RET_5_SECTOR_std
+    - RET_2_SECTOR_std
+    - VOLUME_14
+    - RET_3_INDUSTRY_GROUP_std
+    - VOLUME_1
+    - RET_15
+    - ROCR_6_2
+    - RET_1_SECTOR_median
+    - RET_1_INDUSTRY_std
+    - VOLUME_4
+    - RET_4_SUB_INDUSTRY_std
+    - MOM_6_2
+    - OBV_7_2
+    - SMA_5_2
+    - RET_1_SECTOR_std
+    - OBV_4_5
+    - VOLUME_8
+    - RET_3_SUB_INDUSTRY_median
+    - RET_12
+    - SMA_5_5
+    - RET_1
+    - RET_3_SECTOR_std
+    - RET_4_INDUSTRY_GROUP_std
+    - RET_7
+    - SMA_7_2
+    - SMA_7_5
+    - WMA_5_5
+    - RET_4_INDUSTRY_GROUP_median
+    - RET_2_SUB_INDUSTRY_std
+    - RET_2
+    - ROCR_6_5
+    - OBV_2_2
+    - WMA_7_2
+    - EMA_6_5
+    - RET_3
+    - VOLUME_19
+    - ROCR_7_5
+    - VOLUME_16
+    - RET_3_INDUSTRY_median
+    - RET_19
+    - SMA_6_5
+    - MOM_7_2
+    - MOM_7_5
+    - VOLUME_15
+    - VOLUME_6
+    - OBV_2_5
+    - OBV_3_2
+    - VOLUME_5
+    - VOLUME_7
+    - RET_5_SECTOR_median
+    - OBV_7_5
+    - RET_9
+    - RET_6
+    - RET_5
+    - RET_10
+    - VOLUME_3
+    - RET_1_INDUSTRY_median
+    - RET_4_SECTOR_std
+    - RET_4_INDUSTRY_median
+    - OBV_5_2
+    - RET_2_SECTOR_median
+    - VOLUME_12
+    - WMA_6_2
+    - RET_13
+    - RET_2_SUB_INDUSTRY_median
+    - RET_5_INDUSTRY_std
+    - RET_3_SUB_INDUSTRY_std
+    - RET_18
+    - VOLUME_17
+    - OBV_6_5
+    - RET_8
+    - RET_5_INDUSTRY_median
+    - RET_5_INDUSTRY_GROUP_std
+    - WMA_6_5
+    - RET_3_SECTOR_median
+    - VOLUME_2
+    - RET_2_INDUSTRY_median
+    - ROCR_7_2
   statistics_features:
     - RET_1_INDUSTRY_median
     - RET_1_INDUSTRY_std
@@ -65,4 +168,6 @@ model_options:
     - RET_4_SUB_INDUSTRY_std
     - RET_5_SUB_INDUSTRY_median
     - RET_5_SUB_INDUSTRY_std
-
+decision_tree_params:
+  max_depth: 11
+  min_samples_leaf: 50
