--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -109,6 +109,10 @@ X_train:
   filepath: data/05_model_input/X_train.pkl
   type: pickle.PickleDataset
 
+X_train_selected:
+  filepath: data/05_model_input/X_train_selected.pkl
+  type: pickle.PickleDataset
+
 X_test:
   filepath: data/05_model_input/X_test.pkl
   type: pickle.PickleDataset
@@ -216,4 +220,21 @@ test_df_clean:
 
 model_results_dict:
   filepath: data/07_model_output/model_results_dict.pkl
+  type: pickle.PickleDataset
+
+predictions:
+  filepath: data/07_model_output/submission.csv
+  type: pandas.CSVDataset
+
+xgboost_model:
+  filepath: data/06_models/xgboost_model.pkl
+  type: pickle.PickleDataset
+
+xgb_metrics:
+  filepath: data/09_tracking/xgb_metrics.json
+  type: tracking.MetricsDataset
+  versioned: true
+
+xgb_results_dict:
+  filepath: data/07_model_output/xgb_results_dict.pkl
   type: pickle.PickleDataset
