--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ docstring-code-format = true
 [tool.ruff]
 line-length = 88
 show-fixes = true
-select = [
+lint.select = [
     "F",   # Pyflakes
     "W",   # pycodestyle
     "E",   # pycodestyle
@@ -88,7 +88,7 @@ select = [
     "PL",  # Pylint
     "T201", # Print Statement
 ]
-ignore = ["E501"]  # Ruff format takes care of line-too-long
+lint.ignore = ["E501"]  # Ruff format takes care of line-too-long
 
 [tool.kedro_telemetry]
 project_id = "dc2a4c70761246f3ab9af4d7c986db5c"
